--- a/PushToTalk/PushToTalk.vbproj
+++ b/PushToTalk/PushToTalk.vbproj
@@ -3,14 +3,15 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows</TargetFramework>
-    <StartupObject>Sub Main</StartupObject>
+    <StartupObject>PushToTalk.My.MyApplication</StartupObject>
     <UseWindowsForms>true</UseWindowsForms>
     <MyType>WindowsForms</MyType>
     <ApplicationIcon>Icon_Mic_Blank.ico</ApplicationIcon>
   <!-- AssemblyVersion: used for binding; usually keep Major.Minor.* stable -->
-  <AssemblyVersion>2.1.0</AssemblyVersion>
+  <AssemblyVersion>3.0.0</AssemblyVersion>
     <IncludeAllContentForSelfExtract>true</IncludeAllContentForSelfExtract>
     <ImportedNamespaces>System.Data=False,System.Drawing=False,System.IO=False,System.IO.Ports=False,System.Windows.Forms=False,Microsoft.VisualBasic=True,System=True,System.Collections=True,System.Collections.Generic=True,System.Diagnostics=True,System.Linq=True,System.Xml.Linq=True,System.Threading.Tasks=True,PushToTalk=True</ImportedNamespaces>
+    <ApplicationManifest>My Project\app.manifest</ApplicationManifest>
 
   </PropertyGroup>
 
